--- a/www/sur2.html
+++ b/www/sur2.html
@@ -57,7 +57,7 @@
                         <p id="erd1" class="errmsg"><b>Please answer all questions.</b></p>
                     </div>
                     <div id="d1Blkb" class="sur2">
-                        <p><b>Did either of your biological parents ever...</b><p>
+                        <p><b>Did <ins>either</ins> of your biological parents ever...</b><p>
                         <table data-role="table" id="dTbl2" data-mode="reflow" class="bTable ui-responsive">
                             <thead>
                                 <tr>
@@ -108,7 +108,7 @@
                         <p id="erd2" class="errmsg"><b>Please answer all questions.</b></p>
                     </div>
                     <div id="d1Blkc" class="sur2">
-                        <p><b>Did either of your biological parents ever...</b><p>
+                        <p><b>Did <ins>either</ins> of your biological parents ever...</b><p>
                         <table data-role="table" id="dTbl3" data-mode="reflow" class="bTable ui-responsive">
                             <thead>
                                 <tr>
@@ -145,7 +145,7 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <a id="dsb3" onclick="d1()" class="ui-btn ui-corner-all">Continue</a>
+                        <a id="dsb3" onclick="d1()" class="ui-btn ui-corner-all">Next</a>
                         <p id="erd3" class="errmsg"><b>Please answer all questions.</b></p>
                     </div>
                     <div id="eBlk" class="sur1">
@@ -160,7 +160,7 @@
                                 <tr>
                                     <th></th>
                                     <th style="width:50%"></th>
-                                    <th class="b1Th" style="width:10%">Very Often</th>
+                                    <th class="b1Th" style="width:10%">Very often</th>
                                     <th class="b1Th" style="width:10%">Often</th>
                                     <th class="b1Th" style="width:10%">Sometimes</th>
                                     <th class="b1Th" style="width:10%">Rarely</th>
@@ -237,7 +237,7 @@
                                 <tr>
                                     <th></th>
                                     <th style="width:50%"></th>
-                                    <th class="b1Th" style="width:10%">Very Often</th>
+                                    <th class="b1Th" style="width:10%">Very often</th>
                                     <th class="b1Th" style="width:10%">Often</th>
                                     <th class="b1Th" style="width:10%">Sometimes</th>
                                     <th class="b1Th" style="width:10%">Rarely</th>
@@ -718,7 +718,7 @@
                         <p id="erf6" class="errmsg"><b>Please enter a valid number 1 or greater.</b></p>
                     </div>
                     <div id="g1Blk" class="sur1">
-                        <p><b>To what extent do you think of <ins>death</ins> as being "like you" versus "not like you"?</b></p>
+                        <p><b>To what extent do you think of <ins>death</ins> as being "like you" versus "not like you?"</b></p>
                         <div id="sldWrap">
                             <table data-role="table" id="g1Tbl" class="ui-responsive">
                                 <thead>
