--- a/www/sur1.html
+++ b/www/sur1.html
@@ -23,7 +23,7 @@
                             <input name="a2Op1" id="a2Op4" value="4" type="radio">
                             <label id="a2lb4" for="a2Op4" class="chkbox">Transgender, Female-to-Male (FTM)</label>
                             <input name="a2Op1" id="a2Op5" value="5" type="radio">
-                            <label id="a2lb5" for="a2Op5" class="chkbox">Transgender, Do not identify as Male or Female</label>
+                            <label id="a2lb5" for="a2Op5" class="chkbox">Transgender, do not identify as male or female</label>
                         </fieldset>
                         <a id="asb2" onclick="a2()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="err2" class="errmsg"><b>Please choose an answer.</b></p>
@@ -222,7 +222,7 @@
                                     <th></th>
                                     <th style="width:55%"></th>
                                     <th class="b1Th" style="width:10%">Past week</th>
-                                    <th class="b1Th" style="width:10%">Past wear <span style="font-size:15px">(not past week)</span></th>
+                                    <th class="b1Th" style="width:10%">Past year <span style="font-size:15px">(not past week)</span></th>
                                     <th class="b1Th" style="width:10%">More than a year ago</th>
                                     <th class="b1Th" style="width:10%">Never</th>
                                 </tr>
@@ -270,7 +270,7 @@
                                 </tr>
                                 <tr>
                                     <th>(d)</th>
-                                    <td>you had repeated attacks <ins>of fear or panic</ins> when all of a sudden you felt very frightened, anxious, or uneasy</td>
+                                    <td>you had repeated <ins>attacks of fear or panic</ins> when all of a sudden you felt very frightened, anxious, or uneasy</td>
                                     <td id="13"><input name="b1Op4" id="b1Op13" value="1" type="radio">
                                     </td>
                                     <td id="14"><input name="b1Op4" id="b1Op14" value="2" type="radio">
@@ -313,7 +313,7 @@
                                 </tr>
                                 <tr>
                                     <th>(f)</th>
-                                    <td><ins>after a traumatic experience</ins> you had frequent upsetting memories or dreams, felt jumpy, distant or depressed, and had trouble sleeping or concentrating (<i>Do <ins>not</ins> report the most recent time a traumatic experience occurred, but rather the most recent time you had reactions of the sort described here to a traumatic experience</i>)</td>
+                                    <td><ins>after a traumatic experience</ins>.  You had frequent upsetting memories or dreams, felt jumpy, distant or depressed, and had trouble sleeping or concentrating. (<i>Do <ins>not</ins> report the most recent time a traumatic experience occurred, but rather the most recent time you had reactions of the sort described here to a traumatic experience</i>)</td>
                                     <td id="21"><input name="b1Op6" id="b1Op21" value="1" type="radio">
                                     </td>
                                     <td id="22"><input name="b1Op6" id="b1Op22" value="2" type="radio">
@@ -356,7 +356,7 @@
                             <tbody>
                                 <tr>
                                     <th>(h)</th>
-                                    <td>you <ins>used alcohol</ins> so much that you got in trouble at school/work or with family/friends, or your use was out of control</td>
+                                    <td>you <ins>used alcohol</ins> so much that it got you in trouble at school/work or with family/friends, or your use was out of control</td>
                                     <td id="29"><input name="b1Op8" id="b1Op29" value="1" type="radio">
                                     </td>
                                     <td id="30"><input name="b1Op8" id="b1Op30" value="2" type="radio">
@@ -368,7 +368,7 @@
                                 </tr>
                                 <tr>
                                     <th>(i)</th>
-                                    <td>you <ins>used drugs</ins> (for example, marijuana, cocaine, etc.) so much that you got in trouble at school/work or family/friends, or your use was out of control</td>
+                                    <td>you <ins>used drugs</ins> (for example, marijuana, cocaine, etc.) so much that it got you in trouble at school/work or family/friends, or your use was out of control</td>
                                     <td id="33"><input name="b1Op9" id="b1Op33" value="1" type="radio">
                                     </td>
                                     <td id="34"><input name="b1Op9" id="b1Op34" value="2" type="radio">
@@ -380,7 +380,7 @@
                                 </tr>
                                 <tr>
                                     <th>(j)</th>
-                                    <td>you had unusual experiences like <ins>seeing or hearing things</ins> that other people couldn't see or hear (<i>Do <ins>not</ins> include times that you were half-asleep or drinking alcohol or taking drugs.</i>)</td>
+                                    <td>you had unusual experiences like <ins>seeing or hearing things</ins> that other people couldn't see or hear. (<i>Do <ins>not</ins> include times when you were half-asleep or drinking alcohol or taking drugs.</i>)</td>
                                     <td id="37"><input name="b1Op10" id="b1Op37" value="1" type="radio">
                                     </td>
                                     <td id="38"><input name="b1Op10" id="b1Op38" value="2" type="radio">
@@ -411,7 +411,7 @@
                             <tbody>
                                 <tr>
                                     <th>(k)</th>
-                                    <td>you had <ins>strange thoughts</ins> like believing your mind was being controlled by outside forces, that someone or something was sending you special signs (like through the TV), or someone or something was plotting to harm you</td>
+                                    <td>you had <ins>strange thoughts</ins> like believing your mind was being controlled by outside forces, that someone or something was sending you special signs (like through the TV), or that someone or something was plotting to harm you</td>
                                     <td id="41"><input name="b1Op11" id="b1Op41" value="1" type="radio">
                                     </td>
                                     <td id="42"><input name="b1Op11" id="b1Op42" value="2" type="radio">
@@ -447,7 +447,7 @@
                                 <input type="text" id="b3txt" value="" readonly="readonly" placeholder="Months" />
                             </div>
                             <div class="ui-block-b">
-                                <p><b>Number of Months</b><p>
+                                <p><b>Number of months</b><p>
                             </div>
                         </div>
                         <a id="bsb6" onclick="b3()" class="ui-btn ui-corner-all">Next</a>
@@ -491,7 +491,7 @@
                                 <input type="text" id="c1btxt" value="" readonly="readonly" placeholder="Weeks" />
                             </div>
                             <div class="ui-block-b">
-                                <p><b>Number of Weeks</b><p>
+                                <p><b>Number of weeks</b><p>
                             </div>
                         </div>
                         <a id="csb3" onclick="c1b()" class="ui-btn ui-corner-all">Next</a>
@@ -547,7 +547,7 @@
                                 <input type="text" id="c2btxt" value="" readonly="readonly" placeholder="Weeks" />
                             </div>
                             <div class="ui-block-b">
-                                <p><b>Number of Weeks</b><p>
+                                <p><b>Number of weeks</b><p>
                             </div>
                         </div>
                         <a id="csb7" onclick="c2b()" class="ui-btn ui-corner-all">Next</a>
@@ -652,7 +652,7 @@
                         <p id="erc13" class="errmsg"><b>Please choose an answer.</b></p>
                     </div>
                     <div id="c4Blk" class="sur1">
-                        <p><b>Did you do something to hurt yourself on purpose, but <ins>without</ins> wanting to die (for example, cutting yourself, hitting yourself, or burning yourself)?</b></p>
+                        <p><b>Did you ever do something to hurt yourself on purpose, but <ins>without</ins> wanting to die (for example, cutting yourself, hitting yourself, or burning yourself)?</b></p>
                         <fieldset id="c4fd" data-role="controlgroup">
                             <input name="c4Op1" id="c4Op1" value="1" type="radio">
                             <label id="c4lb1" for="c4Op1" class="chkbox">Yes</label>
@@ -750,7 +750,7 @@
                                 <input type="text" id="c5btxt" value="" readonly="readonly" placeholder="Weeks" />
                             </div>
                             <div class="ui-block-b">
-                                <p><b>Number of Weeks</b><p>
+                                <p><b>Number of weeks</b><p>
                             </div>
                         </div>
                         <a id="csb20" onclick="c5b()" class="ui-btn ui-corner-all">Next</a>
