--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
                     <div id="idBlk" class="sur3">
                         <p><b>Please enter the Participant ID:</b></p>
                         <input type="text" id="idtxt" value="" placeholder="ID" />
-                        <a id="stBtn" onclick="idSt()" class="ui-btn ui-corner-all">Start</a>
+                        <a id="stBtn" onclick="testData()" class="ui-btn ui-corner-all">Start</a>
                         <a id="reBtn" onclick="resendData()" class="ui-btn ui-corner-all">Resend Data</a>
                         <p id="err0" class="errmsg"><b>Please enter a valid ID between 1 and 15 characters.</b></p>
                     </div>
