--- a/www/sur2.html
+++ b/www/sur2.html
@@ -14,7 +14,7 @@
                                     <th style="width:70%"></th>
                                     <th class="b1Th" style="width:10%">Yes</th>
                                     <th class="b1Th" style="width:10%">No</th>
-                                    <th class="b1Th" style="width:10%">Don't Know</th>
+                                    <th class="b1Th" style="width:10%">Don't know</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -65,7 +65,7 @@
                                     <th style="width:70%"></th>
                                     <th class="b1Th" style="width:10%">Yes</th>
                                     <th class="b1Th" style="width:10%">No</th>
-                                    <th class="b1Th" style="width:10%">Don't Know</th>
+                                    <th class="b1Th" style="width:10%">Don't know</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -116,7 +116,7 @@
                                     <th style="width:70%"></th>
                                     <th class="b1Th" style="width:10%">Yes</th>
                                     <th class="b1Th" style="width:10%">No</th>
-                                    <th class="b1Th" style="width:10%">Don't Know</th>
+                                    <th class="b1Th" style="width:10%">Don't know</th>
                                 </tr>
                             </thead>
                             <tbody>
