--- a/www/sur1.html
+++ b/www/sur1.html
@@ -215,7 +215,7 @@
                         <a id="bsb" onclick="bSt()" class="ui-btn ui-corner-all">Start</a>
                     </div>
                     <div id="b1Blk" class="sur2">
-                        <p><b>Have you had problems with the following issues that <ins>lasted more than 1 month</ins> and were <ins>so bad</ins> that they caused problems for you at work/school, with your family, or friends?  If so, when was the <ins>last time</ins>?</b><p>
+                        <p><b>Have you had problems with the following issues that lasted <ins>more than 1 month</ins> and were <ins>so bad</ins> that they caused problems for you at work/school, with your family, or friends?  If so, when was the <ins>last time</ins>?</b><p>
                         <table data-role="table" id="bTbl1" data-mode="reflow" class="bTable ui-responsive">
                             <thead>
                                 <tr>
@@ -286,7 +286,7 @@
                         <p id="erb1" class="errmsg"><b>Please answer all questions.</b></p>
                     </div>
                     <div id="b1Blkc" class="sur2">
-                        <p><b>Have you had problems with the following issues that <ins>lasted more than 1 month</ins> and were <ins>so bad</ins> that they caused problems for you at work/school, with your family, or friends?  If so, when was the <ins>last time</ins>?</b><p>
+                        <p><b>Have you had problems with the following issues that lasted <ins>more than 1 month</ins> and were <ins>so bad</ins> that they caused problems for you at work/school, with your family, or friends?  If so, when was the <ins>last time</ins>?</b><p>
                         <table data-role="table" id="bTbl1c" data-mode="reflow" class="bTable ui-responsive">
                             <thead>
                                 <tr>
@@ -313,7 +313,7 @@
                                 </tr>
                                 <tr>
                                     <th>(f)</th>
-                                    <td><ins>after a traumatic experience</ins>.  You had frequent upsetting memories or dreams, felt jumpy, distant or depressed, and had trouble sleeping or concentrating. (<i>Do <ins>not</ins> report the most recent time a traumatic experience occurred, but rather the most recent time you had reactions of the sort described here to a traumatic experience</i>)</td>
+                                    <td><ins>after a traumatic experience</ins> you had frequent upsetting memories or dreams, felt jumpy, distant or depressed, and had trouble sleeping or concentrating. (<i>Do <ins>not</ins> report the most recent time a traumatic experience occurred, but rather the most recent time you had reactions of the sort described here to a traumatic experience.</i>)</td>
                                     <td id="21"><input name="b1Op6" id="b1Op21" value="1" type="radio">
                                     </td>
                                     <td id="22"><input name="b1Op6" id="b1Op22" value="2" type="radio">
@@ -325,7 +325,7 @@
                                 </tr>
                                 <tr>
                                     <th>(g)</th>
-                                    <td>you were <ins>so agitated, anxious, or worried</ins> that you couldn't relax, sleep, or concentrate, and you couldn't function normally</td>
+                                    <td>you were so <ins>agitated, anxious, or worried</ins> that you couldn't relax, sleep, or concentrate, and you couldn't function normally</td>
                                     <td id="25"><input name="b1Op7" id="b1Op25" value="1" type="radio">
                                     </td>
                                     <td id="26"><input name="b1Op7" id="b1Op26" value="2" type="radio">
@@ -341,7 +341,7 @@
                         <p id="erb2" class="errmsg"><b>Please answer all questions.</b></p>
                     </div>
                     <div id="b1Blkc1" class="sur2">
-                        <p><b>Have you had problems with the following issues that <ins>lasted more than 1 month</ins> and were <ins>so bad</ins> that they caused problems for you at work/school, with your family, or friends?  If so, when was the <ins>last time</ins>?</b><p>
+                        <p><b>Have you had problems with the following issues that lasted <ins>more than 1 month</ins> and were <ins>so bad</ins> that they caused problems for you at work/school, with your family, or friends?  If so, when was the <ins>last time</ins>?</b><p>
                         <table data-role="table" id="bTbl1c1" data-mode="reflow" class="bTable ui-responsive">
                             <thead>
                                 <tr>
@@ -368,7 +368,7 @@
                                 </tr>
                                 <tr>
                                     <th>(i)</th>
-                                    <td>you <ins>used drugs</ins> (for example, marijuana, cocaine, etc.) so much that it got you in trouble at school/work or family/friends, or your use was out of control</td>
+                                    <td>you <ins>used drugs</ins> (for example, marijuana, cocaine, etc.) so much that it got you in trouble at school/work or with family/friends, or your use was out of control</td>
                                     <td id="33"><input name="b1Op9" id="b1Op33" value="1" type="radio">
                                     </td>
                                     <td id="34"><input name="b1Op9" id="b1Op34" value="2" type="radio">
@@ -396,7 +396,7 @@
                         <p id="erb3" class="errmsg"><b>Please answer all questions.</b></p>
                     </div>
                     <div id="b1Blkc2" class="sur2">
-                        <p><b>Have you had problems with the following issues that <ins>lasted more than 1 month</ins> and were <ins>so bad</ins> that they caused problems for you at work/school, with your family, or friends?  If so, when was the <ins>last time</ins>?</b><p>
+                        <p><b>Have you had problems with the following issues that lasted <ins>more than 1 month</ins> and were <ins>so bad</ins> that they caused problems for you at work/school, with your family, or friends?  If so, when was the <ins>last time</ins>?</b><p>
                         <table data-role="table" id="bTbl1c2" data-mode="reflow" class="bTable ui-responsive">
                             <thead>
                                 <tr>
