--- a/www/sur1.html
+++ b/www/sur1.html
@@ -1,5 +1,5 @@
 <div data-role="page" id="survey" data-theme="a">
-                <div data-role="content">
+                <div id="s1" data-role="content">
                     <div id="aBlk" class="sur1">
                         <p><b>First, please answer a few questions about yourself.</b></p>
                         <br />
