--- a/www/sur1.html
+++ b/www/sur1.html
@@ -1,5 +1,6 @@
 <div data-role="page" id="survey" data-theme="a">
-                <div id="s1" data-role="content">
+                <div data-role="content">
+                    <div id="s1">
                     <div id="aBlk" class="sur1">
                         <p><b>First, please answer a few questions about yourself.</b></p>
                         <br />
@@ -773,6 +774,7 @@
                         </fieldset>
                         <a id="csb21" onclick="c5c()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                         <p id="erc21" class="errmsg"><b>Please choose an answer.</b></p>
+                    </div>
                     </div>
                 </div>
                 <div id="numPad">
