--- a/www/sur1.html
+++ b/www/sur1.html
@@ -717,25 +717,25 @@
                             <fieldset id="c3d0ifd" data-role="controlgroup">
                                 <input class="needsclick" name="c3d0iOp1" id="c3d0iOp1" value="1" type="radio">
                                 <label id="c3d0iOp1_1" for="c3d0iOp1" class="chkbox1">Overdose of medications</label>
-                                <input class="needsclick" name="c3d0iOp2" id="c3d0iOp2" value="1" type="radio">
+                                <input class="needsclick" name="c3d0iOp2" id="c3d0iOp2" value="2" type="radio">
                                 <label id="c3d0iOp2_2" for="c3d0iOp2" class="chkbox1">Overdose of illegal drugs</label>
-                                <input class="needsclick" name="c3d0iOp3" id="c3d0iOp3" value="1" type="radio">
+                                <input class="needsclick" name="c3d0iOp3" id="c3d0iOp3" value="3" type="radio">
                                 <label id="c3d0iOp3_3" for="c3d0iOp3" class="chkbox1">Poisoning with a household substance or gas</label>
-                                <input class="needsclick" name="c3d0iOp4" id="c3d0iOp4" value="1" type="radio">
+                                <input class="needsclick" name="c3d0iOp4" id="c3d0iOp4" value="4" type="radio">
                                 <label id="c3d0iOp4_4" for="c3d0iOp4" class="chkbox1">Hanging</label>
-                                <input class="needsclick" name="c3d0iOp5" id="c3d0iOp5" value="1" type="radio">
+                                <input class="needsclick" name="c3d0iOp5" id="c3d0iOp5" value="5" type="radio">
                                 <label id="c3d0iOp5_5" for="c3d0iOp5" class="chkbox1">Suffocation (for example, plastic bag over head)</label>
-                                <input class="needsclick" name="c3d0iOp6" id="c3d0iOp6" value="1" type="radio">
+                                <input class="needsclick" name="c3d0iOp6" id="c3d0iOp6" value="6" type="radio">
                                 <label id="c3d0iOp6_6" for="c3d0iOp6" class="chkbox1">Drowning</label>
-                                <input class="needsclick" name="c3d0iOp7" id="c3d0iOp7" value="1" type="radio">
+                                <input class="needsclick" name="c3d0iOp7" id="c3d0iOp7" value="7" type="radio">
                                 <label id="c3d0iOp7_7" for="c3d0iOp7" class="chkbox1">Cutting or Stabbing</label>
-                                <input class="needsclick" name="c3d0iOp8" id="c3d0iOp8" value="1" type="radio">
+                                <input class="needsclick" name="c3d0iOp8" id="c3d0iOp8" value="8" type="radio">
                                 <label id="c3d0iOp8_8" for="c3d0iOp8" class="chkbox1">Gunshot</label>
-                                <input class="needsclick" name="c3d0iOp9" id="c3d0iOp9" value="1" type="radio">
+                                <input class="needsclick" name="c3d0iOp9" id="c3d0iOp9" value="9" type="radio">
                                 <label id="c3d0iOp9_9" for="c3d0iOp9" class="chkbox1">Jumping from a high place</label>
-                                <input class="needsclick" name="c3d0iOp10" id="c3d0iOp10" value="1" type="radio">
+                                <input class="needsclick" name="c3d0iOp10" id="c3d0iOp10" value="10" type="radio">
                                 <label id="c3d0iOp10_10" for="c3d0iOp10" class="chkbox1">Motor vehicle crash</label>
-                                <input class="needsclick" name="c3d0iOp11" id="c3d0iOp11" value="1" type="radio">
+                                <input class="needsclick" name="c3d0iOp11" id="c3d0iOp11" value="11" type="radio">
                                 <label id="c3d0iOp11_11" for="c3d0iOp11" class="chkbox1">Any other method</label>
                             </fieldset>
                             <a id="csb23" onclick="c3d0i()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
@@ -1014,7 +1014,7 @@
                             <a id="csb32" onclick="c6cv()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                             <p id="erc32" class="errmsg"><b>Please choose an answer.</b></p>
                         </div>
-                        <div id="c6bBlk" class="sur1">
+                        <div id="c6vBlk" class="sur1">
                             <p><b>Please answer "C" for this question.</b></p>
                             <fieldset id="c6bfd" data-role="controlgroup">
                                 <input name="c6bOp1" id="c6bOp1" value="1" type="radio">
@@ -1030,7 +1030,7 @@
                                 <input name="c6bOp1" id="c6bOp6" value="6" type="radio">
                                 <label id="c6blb6" for="c6bOp6" class="chkbox">F</label>
                             </fieldset>
-                            <a id="csb33" onclick="c6b()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
+                            <a id="csb33" onclick="c6v()" class="ui-btn ui-corner-all" style="visibility:hidden">Next</a>
                             <p id="erc33" class="errmsg"><b>Please choose an answer.</b></p>
                         </div>
                     </div>
