Final logic changes

--- a/www/sur1.html
+++ b/www/sur1.html
@@ -857,7 +857,7 @@
                         </div>
                         <div id="c3d7Blk" class="sur1">
                             <p><b>What are the most severe kind of injuries you had as a result of that suicide attempt?</b></p>
-                            <input type="text" id="c3d7txt" value="" readonly="readonly" placeholder="Injuries" />
+                            <input type="text" id="c3d7txt" value="" placeholder="Injuries" data-wrapper-class="standard-text" />
                             <a id="csb30" onclick="c3d7()" class="ui-btn ui-corner-all">Next</a>
                             <p id="erc30" class="errmsg"><b>Please enter an answer.</b></p>
                         </div>
