--- a/www/sur1.html
+++ b/www/sur1.html
@@ -345,7 +345,7 @@
                                 </tr>
                                 <tr>
                                     <th>(f)</th>
-                                    <td><ins>after a traumatic experience</ins> you had frequent upsetting memories or dreams, felt jumpy, distant or depressed, and had trouble sleeping or concentrating. (<i>Do <ins>not</ins> report the most recent time a traumatic experience occurred, but rather the most recent time you had reactions of the sort described here to a traumatic experience.</i>)</td>
+                                    <td><ins>after a traumatic experience</ins> you had frequent upsetting memories or dreams, felt jumpy, distant or depressed, or had trouble sleeping or concentrating. (<i>Do <ins>not</ins> report the most recent time a traumatic experience occurred, but rather the most recent time you had reactions of the sort described here to a traumatic experience.</i>)</td>
                                     <td id="21"><input name="b1Op6" id="b1Op21" value="1" type="radio">
                                     </td>
                                     <td id="22"><input name="b1Op6" id="b1Op22" value="2" type="radio">
@@ -687,27 +687,27 @@
                             <p><b>Which method(s) did you use for your <ins>most recent</ins> suicide attempt?</ins></b><br><span class="smallTitle"><i>(Check all that apply)</i></span></p>
                             <fieldset id="c3d0fd" data-role="controlgroup">
                                 <input class="needsclick" name="c3d0Op1" id="c3d0Op1" value="1" type="checkbox">
-                                <label for="c3d0Op1" class="chkbox1">Overdose of medications</label>
+                                <label id="c3d0Op1_1" for="c3d0Op1" class="chkbox1">Overdose of medications</label>
                                 <input class="needsclick" name="c3d0Op2" id="c3d0Op2" value="1" type="checkbox">
-                                <label for="c3d0Op2" class="chkbox1">Overdose of illegal drugs</label>
+                                <label id="c3d0Op2_2" for="c3d0Op2" class="chkbox1">Overdose of illegal drugs</label>
                                 <input class="needsclick" name="c3d0Op3" id="c3d0Op3" value="1" type="checkbox">
-                                <label for="c3d0Op3" class="chkbox1">Poisoning with a household substance or gas</label>
+                                <label id="c3d0Op3_3" for="c3d0Op3" class="chkbox1">Poisoning with a household substance or gas</label>
                                 <input class="needsclick" name="c3d0Op4" id="c3d0Op4" value="1" type="checkbox">
-                                <label for="c3d0Op4" class="chkbox1">Hanging</label>
+                                <label id="c3d0Op4_4" for="c3d0Op4" class="chkbox1">Hanging</label>
                                 <input class="needsclick" name="c3d0Op5" id="c3d0Op5" value="1" type="checkbox">
-                                <label for="c3d0Op5" class="chkbox1">Suffocation (for example, plastic bag over head)</label>
+                                <label id="c3d0Op5_5" for="c3d0Op5" class="chkbox1">Suffocation (for example, plastic bag over head)</label>
                                 <input class="needsclick" name="c3d0Op6" id="c3d0Op6" value="1" type="checkbox">
-                                <label for="c3d0Op6" class="chkbox1">Drowning</label>
+                                <label id="c3d0Op6_6" for="c3d0Op6" class="chkbox1">Drowning</label>
                                 <input class="needsclick" name="c3d0Op7" id="c3d0Op7" value="1" type="checkbox">
-                                <label for="c3d0Op7" class="chkbox1">Cutting or Stabbing</label>
+                                <label id="c3d0Op7_7" for="c3d0Op7" class="chkbox1">Cutting or Stabbing</label>
                                 <input class="needsclick" name="c3d0Op8" id="c3d0Op8" value="1" type="checkbox">
-                                <label for="c3d0Op8" class="chkbox1">Gunshot</label>
+                                <label id="c3d0Op8_8" for="c3d0Op8" class="chkbox1">Gunshot</label>
                                 <input class="needsclick" name="c3d0Op9" id="c3d0Op9" value="1" type="checkbox">
-                                <label for="c3d0Op9" class="chkbox1">Jumping from a high place</label>
+                                <label id="c3d0Op9_9" for="c3d0Op9" class="chkbox1">Jumping from a high place</label>
                                 <input class="needsclick" name="c3d0Op10" id="c3d0Op10" value="1" type="checkbox">
-                                <label for="c3d0Op10" class="chkbox1">Motor vehicle crash</label>
+                                <label id="c3d0Op10_10" for="c3d0Op10" class="chkbox1">Motor vehicle crash</label>
                                 <input class="needsclick" name="c3d0Op11" id="c3d0Op11" value="1" type="checkbox">
-                                <label for="c3d0Op11" class="chkbox1">Any other method</label>
+                                <label id="c3d0Op11_11" for="c3d0Op11" class="chkbox1">Any other method</label>
                             </fieldset>
                             <a id="csb22" onclick="c3d0()" class="ui-btn ui-corner-all">Next</a>
                             <p id="erc22" class="errmsg"><b>Please choose an answer.</b></p>
@@ -747,13 +747,13 @@
                                 <input name="c3d1Op1" id="c3d1Op1" value="1" type="radio">
                                 <label id="c3d1lb1" for="c3d1Op1" class="chkbox">Fully awake and alert</label>
                                 <input name="c3d1Op1" id="c3d1Op2" value="2" type="radio">
-                                <label id="c3d1lb2" for="c3d1Op2" class="chkbox">Slowed-speech and movement but responsive to questions/minimal medical problems or treatment</label>
+                                <label id="c3d1lb2" for="c3d1Op2" class="chkbox">Slowed speech and movement but responsive to questions/minimal medical problems or treatment</label>
                                 <input name="c3d1Op1" id="c3d1Op3" value="3" type="radio">
-                                <label id="c3d1lb3" for="c3d1Op3" class="chkbox">Severely reduced awareness, or some injury (e.g. mouth burns)</label>
+                                <label id="c3d1lb3" for="c3d1Op3" class="chkbox">Severely reduced awareness, or some injury (e.g., mouth burns)</label>
                                 <input name="c3d1Op1" id="c3d1Op4" value="4" type="radio">
-                                <label id="c3d1lb4" for="c3d1Op4" class="chkbox">Hospitalization-vital signs severely affected or passed out</label>
+                                <label id="c3d1lb4" for="c3d1Op4" class="chkbox">Hospitalization - vital signs severely affected or passed out</label>
                                 <input name="c3d1Op1" id="c3d1Op5" value="5" type="radio">
-                                <label id="c3d1lb5" for="c3d1Op5" class="chkbox">Passed out-major medical problems such as kidney failure, needed blood transfusion</label>
+                                <label id="c3d1lb5" for="c3d1Op5" class="chkbox">Passed out - major medical problems such as kidney failure, needed blood transfusion</label>
                                 <input name="c3d1Op1" id="c3d1Op6" value="6" type="radio">
                                 <label id="c3d1lb6" for="c3d1Op6" class="chkbox">Unknown</label>
                             </fieldset>
@@ -785,13 +785,13 @@
                                 <input name="c3d3Op1" id="c3d3Op1" value="1" type="radio">
                                 <label id="c3d3lb1" for="c3d3Op1" class="chkbox">No damage</label>
                                 <input name="c3d3Op1" id="c3d3Op2" value="2" type="radio">
-                                <label id="c3d3lb2" for="c3d3Op2" class="chkbox">Awake-some breathing problems but no resuscitation needed</label>
+                                <label id="c3d3lb2" for="c3d3Op2" class="chkbox">Awake - some breathing problems but no resuscitation needed</label>
                                 <input name="c3d3Op1" id="c3d3Op3" value="3" type="radio">
-                                <label id="c3d3lb3" for="c3d3Op3" class="chkbox">Awake-minimal to moderate efforts at resuscitation needed</label>
+                                <label id="c3d3lb3" for="c3d3Op3" class="chkbox">Awake - minimal to moderate efforts at resuscitation needed</label>
                                 <input name="c3d3Op1" id="c3d3Op4" value="4" type="radio">
-                                <label id="c3d3lb4" for="c3d3Op4" class="chkbox">Awake-serious effort at resuscitation needed</label>
+                                <label id="c3d3lb4" for="c3d3Op4" class="chkbox">Awake - serious effort at resuscitation needed</label>
                                 <input name="c3d3Op1" id="c3d3Op5" value="5" type="radio">
-                                <label id="c3d3lb5" for="c3d3Op5" class="chkbox">Unconscious-massive efforts at resuscitation necessary for revival</label>
+                                <label id="c3d3lb5" for="c3d3Op5" class="chkbox">Unconscious - massive efforts at resuscitation necessary for revival</label>
                                 <input name="c3d3Op1" id="c3d3Op6" value="6" type="radio">
                                 <label id="c3d3lb6" for="c3d3Op6" class="chkbox">Unknown</label>
                             </fieldset>
@@ -829,7 +829,7 @@
                                 <input name="c3d5Op1" id="c3d5Op4" value="4" type="radio">
                                 <label id="c3d5lb4" for="c3d5Op4" class="chkbox">Bullet lodged in stomach or chest - major bleeding</label>
                                 <input name="c3d5Op1" id="c3d5Op5" value="5" type="radio">
-                                <label id="c3d5lb5" for="c3d5Op5" class="chkbox">Bullet to the head area</label>
+                                <label id="c3d5lb5" for="c3d5Op5" class="chkbox">Bullet to head area</label>
                                 <input name="c3d5Op1" id="c3d5Op6" value="6" type="radio">
                                 <label id="c3d5lb6" for="c3d5Op6" class="chkbox">Unknown</label>
                             </fieldset>
@@ -842,7 +842,7 @@
                                 <input name="c3d6Op1" id="c3d6Op1" value="1" type="radio">
                                 <label id="c3d6lb1" for="c3d6Op1" class="chkbox">Minor bruises only - no treatment necessary</label>
                                 <input name="c3d6Op1" id="c3d6Op2" value="2" type="radio">
-                                <label id="c3d6lb2" for="c3d6Op2" class="chkbox">Sprains or minor injuries - no bone, or tendon damage; no internal bleeding, or brain damage</label>
+                                <label id="c3d6lb2" for="c3d6Op2" class="chkbox">Sprains or minor injuries - no bone or tendon damage; no internal bleeding or brain damage</label>
                                 <input name="c3d6Op1" id="c3d6Op3" value="3" type="radio">
                                 <label id="c3d6lb3" for="c3d6Op3" class="chkbox">Fractured arms or legs - needed a cast but recovered completely</label>
                                 <input name="c3d6Op1" id="c3d6Op4" value="4" type="radio">
