--- a/www/sur2.html
+++ b/www/sur2.html
@@ -691,7 +691,7 @@
                                 </tr>
                                 <tr>
                                     <th>(v)</th>
-                                    <td>Please answer "Not at all like me" for this question.</td>
+                                    <td>Please answer "Not at all like me" for this question</td>
                                     <td id="e111">
                                         <input name="e3Op13" id="e3Op61" value="1" type="radio">
                                     </td>
