--- a/www/sur1.html
+++ b/www/sur1.html
@@ -742,7 +742,7 @@
                             <p id="erc23" class="errmsg"><b>Please choose an answer.</b></p>
                         </div>
                         <div id="c3d1Blk" class="sur1">
-                            <p><b>What are the most severe kind of injuries you had as a result of that suicide attempt?</b><br><span class="smallTitle"><i>(Please check one.)</i></span></p>
+                            <p><b>What are the most severe kinds of injuries you had as a result of that suicide attempt?</b><br><span class="smallTitle"><i>(Please check one.)</i></span></p>
                             <fieldset id="c3d1fd" data-role="controlgroup">
                                 <input name="c3d1Op1" id="c3d1Op1" value="1" type="radio">
                                 <label id="c3d1lb1" for="c3d1Op1" class="chkbox">Fully awake and alert</label>
@@ -761,7 +761,7 @@
                             <p id="erc24" class="errmsg"><b>Please choose an answer.</b></p>
                         </div>
                         <div id="c3d2Blk" class="sur1">
-                            <p><b>What are the most severe kind of injuries you had as a result of that suicide attempt?</b><br><span class="smallTitle"><i>(Please check one.)</i></span></p>
+                            <p><b>What are the most severe kinds of injuries you had as a result of that suicide attempt?</b><br><span class="smallTitle"><i>(Please check one.)</i></span></p>
                             <fieldset id="c3d2fd" data-role="controlgroup">
                                 <input name="c3d2Op1" id="c3d2Op1" value="1" type="radio">
                                 <label id="c3d2lb1" for="c3d2Op1" class="chkbox">No damage</label>
@@ -780,7 +780,7 @@
                             <p id="erc25" class="errmsg"><b>Please choose an answer.</b></p>
                         </div>
                         <div id="c3d3Blk" class="sur1">
-                            <p><b>What are the most severe kind of injuries you had as a result of that suicide attempt?</b><br><span class="smallTitle"><i>(Please check one.)</i></span></p>
+                            <p><b>What are the most severe kinds of injuries you had as a result of that suicide attempt?</b><br><span class="smallTitle"><i>(Please check one.)</i></span></p>
                             <fieldset id="c3d3fd" data-role="controlgroup">
                                 <input name="c3d3Op1" id="c3d3Op1" value="1" type="radio">
                                 <label id="c3d3lb1" for="c3d3Op1" class="chkbox">No damage</label>
@@ -799,7 +799,7 @@
                             <p id="erc26" class="errmsg"><b>Please choose an answer.</b></p>
                         </div>
                         <div id="c3d4Blk" class="sur1">
-                            <p><b>What are the most severe kind of injuries you had as a result of that suicide attempt?</b><br><span class="smallTitle"><i>(Please check one.)</i></span></p>
+                            <p><b>What are the most severe kinds of injuries you had as a result of that suicide attempt?</b><br><span class="smallTitle"><i>(Please check one.)</i></span></p>
                             <fieldset id="c3d4fd" data-role="controlgroup">
                                 <input name="c3d4Op1" id="c3d4Op1" value="1" type="radio">
                                 <label id="c3d4lb1" for="c3d4Op1" class="chkbox">Surface scratches; none or minor bleeding; little or no wound care required</label>
@@ -818,7 +818,7 @@
                             <p id="erc27" class="errmsg"><b>Please choose an answer.</b></p>
                         </div>
                         <div id="c3d5Blk" class="sur1">
-                            <p><b>What are the most severe kind of injuries you had as a result of that suicide attempt?</b><br><span class="smallTitle"><i>(Please check one.)</i></span></p>
+                            <p><b>What are the most severe kinds of injuries you had as a result of that suicide attempt?</b><br><span class="smallTitle"><i>(Please check one.)</i></span></p>
                             <fieldset id="c3d5fd" data-role="controlgroup">
                                 <input name="c3d5Op1" id="c3d5Op1" value="1" type="radio">
                                 <label id="c3d5lb1" for="c3d5Op1" class="chkbox">No damage</label>
@@ -837,7 +837,7 @@
                             <p id="erc28" class="errmsg"><b>Please choose an answer.</b></p>
                         </div>
                         <div id="c3d6Blk" class="sur1">
-                            <p><b>What are the most severe kind of injuries you had as a result of that suicide attempt?</b><br><span class="smallTitle"><i>(Please check one.)</i></span></p>
+                            <p><b>What are the most severe kinds of injuries you had as a result of that suicide attempt?</b><br><span class="smallTitle"><i>(Please check one.)</i></span></p>
                             <fieldset id="c3d6fd" data-role="controlgroup">
                                 <input name="c3d6Op1" id="c3d6Op1" value="1" type="radio">
                                 <label id="c3d6lb1" for="c3d6Op1" class="chkbox">Minor bruises only - no treatment necessary</label>
@@ -856,7 +856,7 @@
                             <p id="erc29" class="errmsg"><b>Please choose an answer.</b></p>
                         </div>
                         <div id="c3d7Blk" class="sur1">
-                            <p><b>What are the most severe kind of injuries you had as a result of that suicide attempt?</b></p>
+                            <p><b>What are the most severe kinds of injuries you had as a result of that suicide attempt?</b></p>
                             <input type="text" id="c3d7txt" value="" placeholder="Injuries" data-wrapper-class="standard-text" />
                             <a id="csb30" onclick="c3d7()" class="ui-btn ui-corner-all">Next</a>
                             <p id="erc30" class="errmsg"><b>Please enter an answer.</b></p>
